kubernetes/kubectl-yaml/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: voting-app-prd
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis
  type: ClusterIP
