kubernetes/kubectl-yaml/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: voting-app-prd
spec:
  ports:
  - name: 8080-tcp
    nodePort: 31001
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: result
  type: NodePort
