kubernetes/kubectl-yaml/redis-networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
  namespace: voting-app-prd
spec:
  podSelector:
    matchLabels:
      name: redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: vote
    - podSelector:
        matchLabels:
          name: worker
    ports:
    - protocol: TCP
      port: 6379
